--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <!-- контакти -->
             <ul class="kontakty">
                 <li class="mail kntkt-dist"><a href="mailto:info@devstudio.com" class="link">
-                    <svg class="logo-mail" width="16px" height="12px">
+                    <svg class="logo-mail" width="16" height="12">
                         <use href="./images/icons.svg#icon-envelope"></use>
                     </svg>info@devstudio.com</a>
                 </li>
                 <li class="tel kntkt-dist"><a href="tel:+380961111111" class="link">
-                    <svg class="logo-mail" width="10px" height="16px">
+                    <svg class="logo-mail" width="10" height="16">
                         <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
             </ul>
@@ -53,7 +53,7 @@
                 <ul class="perevagy">
                     <li class="logo-perevagy">
                         <div class="bg-perevagy">
-                            <svg class="icon-perevagy" width="70px" height="70px">
+                            <svg class="icon-perevagy" width="70" height="70">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -62,7 +62,7 @@
                     </li>
                     <li class="logo-perevagy">
                         <div class="bg-perevagy">
-                            <svg class="icon-perevagy" width="70px" height="70px">
+                            <svg class="icon-perevagy" width="70" height="70">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -71,7 +71,7 @@
                     </li>
                     <li class="logo-perevagy">
                         <div class="bg-perevagy">
-                            <svg class="icon-perevagy" width="70px" height="70px">
+                            <svg class="icon-perevagy" width="70" height="70">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -80,7 +80,7 @@
                     </li>
                     <li class="logo-perevagy">
                         <div class="bg-perevagy">
-                            <svg class="icon-perevagy" width="70px" height="70px">
+                            <svg class="icon-perevagy" width="70" height="70">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -112,28 +112,28 @@
                             <ul class="list-soc-comand">
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a> 
@@ -149,28 +149,28 @@
                             <ul class="list-soc-comand">
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a> 
@@ -186,28 +186,28 @@
                             <ul class="list-soc-comand">
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a> 
@@ -223,28 +223,28 @@
                             <ul class="list-soc-comand">
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li>
                                     <a href="#" class="solid-round-comand">
-                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                        <svg class="logo-soc-comand" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a> 
@@ -261,42 +261,42 @@
                 <ul class="clients">
                     <li>
                         <a href="#" class="border-client">
-                            <svg class="logo-client" width="41px" height="46.7px">
+                            <svg class="logo-client" width="41" height="46.7">
                                 <use href="./images/icons.svg#icon-logo-comp-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="border-client">
-                            <svg class="logo-client" width="40px" height="52px">
+                            <svg class="logo-client" width="40" height="52">
                                 <use href="./images/icons.svg#icon-logo-comp-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="border-client">
-                            <svg class="logo-client" width="43.46px" height="41.18px">
+                            <svg class="logo-client" width="43.46" height="41.18">
                                 <use href="./images/icons.svg#icon-logo-comp-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="border-client">
-                            <svg class="logo-client" width="84.44px" height="40.62px">
+                            <svg class="logo-client" width="84.44" height="40.62">
                                 <use href="./images/icons.svg#icon-logo-comp-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="border-client">
-                            <svg class="logo-client" width="62.54px" height="45.43px">
+                            <svg class="logo-client" width="62.54" height="45.43">
                                 <use href="./images/icons.svg#icon-logo-comp-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="border-client">
-                            <svg class="logo-client" width="93.79px" height="43.93px">
+                            <svg class="logo-client" width="93.79" height="43.93">
                                 <use href="./images/icons.svg#icon-logo-comp-6"></use>
                             </svg>
                         </a>
@@ -323,28 +323,28 @@
                 <ul class="list-soc">
                     <li>
                         <a href="#" class="solid-round">
-                            <svg class="logo-soc" width="20px" height="20px">
+                            <svg class="logo-soc" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a> 
                     </li>
                     <li>
                         <a href="#" class="solid-round">
-                            <svg class="logo-soc" width="20px" height="20px">
+                            <svg class="logo-soc" width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a> 
                     </li>
                     <li>
                         <a href="#" class="solid-round">
-                            <svg class="logo-soc" width="20px" height="20px">
+                            <svg class="logo-soc" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a> 
                     </li>
                     <li>
                         <a href="#" class="solid-round">
-                            <svg class="logo-soc" width="20px" height="20px">
+                            <svg class="logo-soc" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a> 
