--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,12 @@
             <!-- контакти -->
             <ul class="kontakty">
                 <li class="mail kntkt-dist"><a href="mailto:info@devstudio.com" class="link">
-                    <svg class="logo-mail" width="16px" height="12px">
+                    <svg class="logo-mail" width="16" height="12">
                         <use href="./images/icons.svg#icon-envelope"></use>
                     </svg>info@devstudio.com</a>
                 </li>
                 <li class="tel kntkt-dist"><a href="tel:+380961111111" class="link">
-                    <svg class="logo-mail" width="10px" height="16px">
+                    <svg class="logo-mail" width="10" height="16">
                         <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
             </ul>
@@ -175,28 +175,28 @@
                 <ul class="list-soc">
                     <li>
                         <a href="#" class="solid-round">
-                            <svg class="logo-soc" width="20px" height="20px">
+                            <svg class="logo-soc" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a> 
                     </li>
                     <li>
                         <a href="#" class="solid-round">
-                            <svg class="logo-soc" width="20px" height="20px">
+                            <svg class="logo-soc" width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a> 
                     </li>
                     <li>
                         <a href="#" class="solid-round">
-                            <svg class="logo-soc" width="20px" height="20px">
+                            <svg class="logo-soc" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a> 
                     </li>
                     <li>
                         <a href="#" class="solid-round">
-                            <svg class="logo-soc" width="20px" height="20px">
+                            <svg class="logo-soc" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a> 
